update indexhtml tubruksususegar

--- a/index.html
+++ b/index.html
@@ -152,9 +152,9 @@
                     <!-- Kartu Produk 4 -->
                     <div class="product-card">
                         <!-- PERBAIKAN: Menambahkan 'assets/' pada path gambar -->
-                        <img src="assets/images/menu-items/kopi-tubruk-susu.jpg" alt="Kopi Tubruk Susu Murni Panas di gelas tinggi" class="product-card__image">
+                        <img src="assets/images/menu-items/kopi-tubruk-susu.jpg" alt="Kopi Tubruk Susu Segar Panas di gelas tinggi" class="product-card__image">
                         <div class="product-card__body">
-                            <h4 class="product-card__title">Kopi Tubruk Susu Murni</h4>
+                            <h4 class="product-card__title">Kopi Tubruk Susu Segar</h4>
                         </div>
                     </div>
                 </div>
