--- a/index.html
+++ b/index.html
@@ -105,12 +105,12 @@
             <div class="container promo__grid">
                 <div class="promo__image-wrapper">
                     <!-- PERBAIKAN: Menambahkan 'assets/' pada path gambar -->
-                    <img src="assets/images/menu-items/promo-paket-produktif.jpg" alt="Paket promo STMJ Authentic dan Tempe Mendoan hangat">
+                    <img src="assets/images/menu-items/promo-paket-produktif.jpg" alt="Paket promo Kopi Tubruk Susu Segar dan Classic Platter">
                 </div>
                 <div class="promo__text">
                     <span class="promo__label">PROMO BULAN INI</span>
-                    <h2 class="promo__title">Paket Produktif: Energi & Inspirasi</h2>
-                    <p>Lembur atau kerja tugas? Nikmati kombinasi STMJ Authentic dan Tempe Mendoan gurih hanya dengan <strong>Rp 35.000,-</strong>. Tunjukkan penawaran ini kepada tim kami.</p>
+                    <h2 class="promo__title">Paket Classic Inspiratif</h2>
+                    <p>Lembur atau kerja tugas? Nikmati kombinasi Kopi Tubruk Susu Segar dengan Healty Classic Platter <strong>Rp 35.000,-</strong>. Tunjukkan penawaran ini kepada tim kami.</p>
                     <!-- PERBAIKAN: Menambahkan rel="noopener noreferrer" untuk keamanan -->
                     <a href="https://api.whatsapp.com/send?phone=628155800557&text=Halo%20Merempah%2C%20saya%20ingin%20klaim%20Promo%20Paket%20Produktif." target="_blank" rel="noopener noreferrer" class="btn btn--primary">Klaim via WhatsApp</a>
                 </div>
@@ -152,7 +152,7 @@
                     <!-- Kartu Produk 4 -->
                     <div class="product-card">
                         <!-- PERBAIKAN: Menambahkan 'assets/' pada path gambar -->
-                        <img src="assets/images/menu-items/kopi-tubruk-susu.jpg" alt="Kopi Tubruk Susu Segar Panas di gelas tinggi" class="product-card__image">
+                        <img src="assets/images/menu-items/kopi_tubruk_susu_segar.jpg" alt="Kopi Tubruk Susu Segar Panas di gelas tinggi" class="product-card__image">
                         <div class="product-card__body">
                             <h4 class="product-card__title">Kopi Tubruk Susu Segar</h4>
                         </div>
