--- a/other-product.html
+++ b/other-product.html
@@ -162,7 +162,7 @@
                     <div class="retail-product__details">
                         <span class="retail-product__label">Minuman Kesehatan Tradisional</span>
                         <h3 class="retail-product__name">Jamu Kemasan Siap Minum</h3>
-                        <p class="retail-product__description">Kebaikan resep jamu warisan seperti Beras Kencur dan Kunyit Asam, kini hadir dalam botol siap minum yang praktis. Solusi cepat dan higienis untuk menjaga imunitas dan kesegaran tubuh Anda setiap hari.</p>
+                        <p class="retail-product__description">Kebaikan resep jamu warisan seperti Beras Kencur dan Kunyit Asam, kini hadir dalam kemasan sachet-filter siap seduh yang praktis. Solusi cepat dan higienis untuk menjaga imunitas dan kesegaran tubuh Anda setiap hari.</p>
                          <ul class="retail-product__features">
                             <li><i class="fas fa-history"></i> Resep Warisan Otentik</li>
                             <li><i class="fas fa-shield-alt"></i> Meningkatkan Imunitas Tubuh</li>
