--- a/kontak.html
+++ b/kontak.html
@@ -90,7 +90,7 @@
                     <!-- Kolom Kiri: Peta -->
                     <div class="location__map">
                         <iframe 
-                            src="https://maps.app.goo.gl/qCutH5nBuvRTeibw7" 
+                            src="https://www.google.com/maps/place/Seduh.lur/@-7.9322794,112.3205922,119633m/data=!3m1!1e3!4m10!1m2!2m1!1sseduhlur!3m6!1s0x2dd629ac1e7dbcaf:0x7f426c69c28363d4!8m2!3d-7.9395098!4d112.6331784!15sCghzZWR1aGx1cloKIghzZWR1aGx1cpIBC2NvZmZlZV9zaG9wqgExEAEyHxABIhsP4ct5lDShb4V5hXeaHrlNjyAdvx-qMIEhASUyDBACIghzZWR1aGx1cuABAA!16s%2Fg%2F11vdqjzt8w?entry=ttu&g_ep=EgoyMDI1MDgxMy4wIKXMDSoASAFQAw%3D%3D" 
                             width="100%" 
                             height="550" 
                             style="border:0;" 
