--- a/kontak.html
+++ b/kontak.html
@@ -88,18 +88,19 @@
             <div class="container">
                 <div class="location__grid--revamped">
                     <!-- Kolom Kiri: Peta -->
-                    <div class="location__map">
-                        <iframe 
-                            src="https://www.google.com/maps/place/Seduh.lur/@-7.9322794,112.3205922,119633m/data=!3m1!1e3!4m10!1m2!2m1!1sseduhlur!3m6!1s0x2dd629ac1e7dbcaf:0x7f426c69c28363d4!8m2!3d-7.9395098!4d112.6331784!15sCghzZWR1aGx1cloKIghzZWR1aGx1cpIBC2NvZmZlZV9zaG9wqgExEAEyHxABIhsP4ct5lDShb4V5hXeaHrlNjyAdvx-qMIEhASUyDBACIghzZWR1aGx1cuABAA!16s%2Fg%2F11vdqjzt8w?entry=ttu&g_ep=EgoyMDI1MDgxMy4wIKXMDSoASAFQAw%3D%3D" 
-                            width="100%" 
-                            height="550" 
-                            style="border:0;" 
-                            allowfullscreen="" 
-                            loading="lazy" 
-                            referrerpolicy="no-referrer-when-downgrade" 
-                            title="Peta Lokasi Merempah di Jl. Candi Trowulan, Malang">
-                        </iframe>
-                    </div>
+                   <!-- Kolom Kiri: Peta -->
+					<div class="location__map">
+						<iframe 
+							src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d520958.29904669145!2d112.32059217002333!3d-7.932279394092843!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2dd629ac1e7dbcaf%3A0x7f426c69c28363d4!2sSeduh.lur!5e1!3m2!1sid!2sid!4v1755633606905!5m2!1sid!2sid" 
+							width="100%" 
+							height="550" 
+							style="border:0;" 
+							allowfullscreen="" 
+							loading="lazy" 
+							referrerpolicy="no-referrer-when-downgrade" 
+							title="Peta Lokasi Merempah di Jl. Candi Trowulan, Malang">
+						</iframe>
+					</div>
                     <!-- Kolom Kanan: Kartu Informasi -->
                     <div class="location__details-card">
                         <h2 class="location__card-title">Kunjungi Kami</h2>
